refactor: config and logger
