# docs/swagger.json
@@ -76,15 +76,18 @@
         "config.Client": {
             "type": "object",
             "required": [
-                "appEnv"
+                "env"
             ],
             "properties": {
-                "appEnv": {
+                "env": {
                     "type": "string",
                     "enum": [
                         "development",
                         "production"
                     ]
+                },
+                "isDev": {
+                    "type": "boolean"
                 }
             }
         }
